fix: align pointer to top center

--- a/style.css
+++ b/style.css
@@ -184,9 +184,9 @@ h1 {
 
 .pointer {
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -25%);
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
